# linkedin-dms

./: README.md  pyproject.toml
apps/api/: main.py
docs/: PROJECT_OVERVIEW.md
libs/core/: job_runner.py
libs/providers/linkedin/: provider.py
tests/: test_fetch_messages.py  test_list_threads.py  test_sync_send.py
